Complete Build-A-Blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <body>
 
         <div style='float: right'>
-            <a href="blog">Blog</a> | <a href="newpost">Add New Blog</a>
+            <a href="blog">Blog Homepage</a> | <a href="newpost">Add Blog Entry</a>
         </div>
 
     {% block content %}
