--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -11,9 +11,9 @@
         <p class="error">{{title_error}}</p>
         <label>Blog Entry:
             <br>
-            <textarea name="blog-entry">{{blog_body}}</textarea>
+            <textarea name="blog-entry">{{blog_entry}}</textarea>
         </label>
-        <p class="error">{{body_error}}</p>
+        <p class="error">{{entry_error}}</p>
         <input type="submit" value='Add Entry'>
     </form>
 {% endblock %}
