Complete Build-A-Blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
     </head>
 <body>
 
-        <div style='float: right'>
-            <a href="blog">Blog Homepage</a> | <a href="newpost">Add Blog Entry</a>
+        <div align='left'>
+            <a href="blog">Main Blog Page</a> 
+            <a href="newpost">Add Blog Entry</a>
         </div>
 
     {% block content %}
