Continue work on blogz

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
         <div align='left'>
             <a href="blog">Main Blog Page</a> 
             <a href="newpost">Add Blog Entry</a>
+            <a href="login">Login</a>
+            <a href="signup">Signup</a>
+            <a href="logout">Logout</a>
+            <a href="index">Home</a>
         </div>
 
     {% block content %}
