--- a/templates/login.html
+++ b/templates/login.html
@@ -8,12 +8,12 @@
         <tr>
             <td><label for="username">Username</label></td>
             <td><input name="username" type="username"></td>
-            <td><p class="error">{{username_error}}</p></td>
+            <p class="error">{{username_error}}</p>
         </tr>
         <tr>
             <td><label for="password">Password</label></td>
             <td><input name="password" type="password"></td>
-            <td><p class="error">{{password_error}}</p></td>
+            <p class="error">{{password_error}}</p>
         </tr>
     </table>
     <input type="submit" value="Login">
