--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,21 +6,18 @@
     <table>
         <tr>
             <td><label for="username">Username</label></td>
-            <td>
-                <input name="username" type="username" value="{{ username }}">
-            </td>
+            <td><input name="username" type="username" value="{{ username }}"></td>
+            <td><p class="error">{{username_error}}</p></td>
         </tr>
         <tr>
             <td><label for="password">Password</label></td>
-            <td>
-                <input name="password" type="password">
-            </td>
+            <td><input name="password" type="password"></td>
+            <td><p class="error">{{password_error}}</p></td>
         </tr>
         <tr>
             <td><label for="verify">Verify Password</label></td>
-            <td>
-                <input name="verify" type="password">
-            </td>
+            <td><input name="verify" type="password"></td>
+            <td><p class="error">{{verify_error}}</p></td>
         </tr>
     </table>
     <input type="submit" value="Signup">
