Continue working on blogz

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,15 @@
 <body>
 
         <div align='left'>
-            <a href="blog">Main Blog Page</a> 
+            <a href="blog">List of Blog Entries</a> 
             <a href="newpost">Add Blog Entry</a>
+            <a href="/">Home</a>
+        </div>
+
+        <div align='right'>
             <a href="login">Login</a>
-            <a href="signup">Signup</a>
             <a href="logout">Logout</a>
-            <a href="index">Home</a>
+            <a href="signup">Signup</a>
         </div>
 
     {% block content %}
