--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     
-    <h1>Build a Blog</h1>
+    <h1>Blogz</h1>
 
     {% if posts|length == 0 %}
     <h3>No blog posts yet.</h3>
