--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 
-{% block title %} {{ title }} {% endblock %}
-{% block header %} Welcome to Blogz {% endblock %}
-
 {% block content %}
 
     {% if users|length == 0 %}
@@ -12,7 +9,7 @@
     <ul>
         {% for user in users %}
         <li>
-            <a href= "/singleuser?user={{ user.id }}" > {{user.username}} </a>
+            <a href= "/blog?user={{ user.id }}" > {{user.username}} </a>
             </li>
         {% endfor %}
     </ul>
