Small update to template blogz

--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -8,7 +8,7 @@
         <li>
             <h2> <a href= "/blog?id= {{ blog.id }}" > {{blog.title}} </a> </h2>
             <p> {{blog.body}} </p>
-            <p class="post-author">written by <a href= "/blog?user={{ user.id }}" > {{user.username}} </a></p>
+            <p class="entry-user">written by <a href= "/blog?user={{ user.id }}" > {{user.username}} </a></p>
             </li>
         {% endfor %}
     </ul>
