Functionality updates blogz

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
 <body>
 
         <div align='left'>
-            <a href="blog">List of Blog Entries</a> 
-            <a href="newpost">Add Blog Entry</a>
             <a href="/">Home</a>
+            <a href="blog">Blog posts</a> 
+            <a href="newpost">Newpost</a>
         </div>
 
         <div align='right'>
