--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -4,5 +4,6 @@
     
     <h1>{{post.title}}</h1>
     <p>{{post.body}}</p>
+    <p id="author">Written by <a href="blog?user={{post.owner.id}}">{{post.owner.username}}</a>.</p>
                
 {% endblock %}
