--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>{{title}}</title>
+        <link rel="stylesheet" type="text/css" href="/../static/styles.css">
     </head>
 <body>
-
         <div align='left'>
             <a href="/">Home</a>
             <a href="blog">Blog posts</a> 
